# zero2prod

./: Cargo.toml  Dockerfile  rustfmt.toml  spec.yaml
.github/workflows/: general.yml
configuration/: base.yaml  production.yaml
migrations/: 20241020094540_create_subscriptions_table.sql
src/: configuration.rs  domain.rs  email_client.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/domain/: new_subscriber.rs  subscriber_email.rs  subscriber_name.rs
src/routes/: subscriptions.rs  subscriptions_confirm.rs
tests/: health_check.rs
tests/api/: helpers.rs  subscriptions.rs  subscriptions_confirm.rs
