[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4"
config = "0.14"
chrono = { version = "0.4.22", default-features = false, features = ["clock"] }
fake = "2.9"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3"
tracing-log = "0.2"
tracing-actix-web = "0.7"
# tracing = "0.1.19"
# tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
# tracing-bunyan-formatter = "0.3.1"
# tracing-log = "0.2.0"
# tracing-actix-web = "0.7"
secrecy = { version = "0.8", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde-aux = "4"
sqlx = { version = "0.8", default-features = false, features = [
  "runtime-tokio-rustls",
  "macros",
  "postgres",
  "uuid",
  "chrono",
  "migrate",
] }
unicode-segmentation = "1"
uuid = { version = "1", features = ["v4"] }
validator = "0.18"


[dev-dependencies]
claims = "0.7"
quickcheck = "1.0.3"
quickcheck_macros = "1"
rand = "0.8"
reqwest = "0.12"
